# diffkemp

./: README.md  build.sh  flake.nix  pyproject.toml  run.sh
.github/workflows/: builds.yml  ci.yml
diffkemp/: __init__.py  config.py  diffkemp.in  diffkemp.py  output.py  snapshot.py
diffkemp/building/: cc_wrapper.py
diffkemp/llvm_ir/: __init__.py  kernel_llvm_source_builder.py  kernel_source_tree.py  llvm_module.py  single_c_builder.py  single_llvm_finder.py  source_tree.py  wrapper_build_finder.py
diffkemp/semdiff/: __init__.py  caching.py  function_diff.py  module_diff.py
diffkemp/simpll/: CMakeLists.txt  CustomPatternSet.cpp  DifferentialFunctionComparator.cpp  DifferentialFunctionComparator.h  InstructionVariant.cpp  InstructionVariant.h  PatternAnalysis.cpp  PatternAnalysis.h  PatternBase.cpp  PatternBase.h  PatternGenerator.cpp  PatternGenerator.h  SimpLL.cpp  Snapshot.h  SourceCodeUtils.cpp  Utils.cpp  Utils.h  __init__.py  library.py  simpll.py  simpll_build.py
diffkemp/simpll/passes/: CalledFunctionsAnalysis.cpp  FunctionAbstractionsGenerator.cpp  FunctionAbstractionsGenerator.h  MergeNumberedFunctionsPass.cpp  SimplifyKernelGlobalsPass.cpp  StructHashGeneratorPass.cpp  StructureDebugInfoAnalysis.h  StructureSizeAnalysis.cpp
docker/diffkemp-devel/: install.sh
docs/: installation.md
tests/regression/: pattern_generation_test.py
tests/regression/pattern_generation/: pattern_generation_specs.yaml
tests/unit_tests/: run_e2e_tests.py.in
tests/unit_tests/simpll/: CMakeLists.txt  DifferentialFunctionComparatorTest.cpp
(+43 files in other folders)
