[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "cffi",
]
build-backend = "setuptools.build_meta"

[project]
name = "Diffkemp"
dynamic = ["version"]
dependencies = [
    "flake8",
    "pytest",
    "pytest-mock",
    "pyyaml",
    "cffi",
]
readme = "README.md"
description = "A tool for semantic difference analysis of kernel functions"
authors = [
    {name = "Viktor Malik", email = "vmalik@redhat.com"},
]

[tool.setuptools]
packages = [
    "diffkemp",
]

[tool.setuptools_scm]
